--- a/package.json
+++ b/package.json
@@ -16,8 +16,71 @@
     ],
     "author": "Artem <Artem.V.Shamsutdinov@beyond-decentralized.world> (https://beyond-decentralized.world/)",
     "devDependencies": {
+        "@as-com/pson": "^3.0.1",
+        "@angular/animations": "^15.0.0",
+        "@angular/cli": "~15.0.3",
+        "@angular/common": "^15.0.0",
+        "@angular/compiler": "^15.0.0",
+        "@angular/compiler-cli": "^15.0.0",
+        "@angular/core": "^15.0.0",
+        "@angular/forms": "^15.0.0",
+        "@angular/language-service": "^15.0.0",
+        "@angular/platform-browser": "^15.0.0",
+        "@angular/platform-browser-dynamic": "^15.0.0",
+        "@angular/router": "^15.0.0",
+        "@angular-devkit/build-angular": "^15.0.3",
+        "@babel/runtime": "7.20.6",
+        "@capacitor/app": "4.1.1",
+        "@capacitor/cli": "4.6.1",
+        "@capacitor/core": "4.6.1",
+        "@capacitor/haptics": "4.1.0",
+        "@capacitor/keyboard": "4.1.0",
+        "@capacitor/status-bar": "4.1.1",
+        "@ionic/angular": "^6.4.1",
+        "@ionic/angular-toolkit": "latest",
+        "@ionic/cli": "latest",
+        "@ionic/core": "^6.4.1",
+        "@rollup/plugin-commonjs": "^25.0.1",
+        "@rollup/plugin-node-resolve": "~15.1.0",
+        "@rollup/plugin-typescript": "^11.1.1",
+        "@tsconfig/node16": "1.0.2",
+        "@types/emscripten": "^1.39.6",
+        "@types/eslint": "^8.40.1",
+        "@types/estree": "^1.0.1",
+        "@types/jasmine": "~4.3.0",
+        "@types/json-schema": "^7.0.12",
+        "@types/node": "^18.11.15",
+        "@types/sql.js": "^1.4.3",
+        "async": "^3.2.1",
+        "broadcast-channel": "^4.14.0",
+        "cassandra-driver": "^4.6.3",
+        "fastify": "^3.22.0",
+        "fastify-cors": "^6.0.2",
+        "fastify-static": "^4.4.2",
+        "fs-extra": "^10.1.0",
+        "jasmine-core": "~4.5.0",
+        "karma": "~6.4.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.1.0",
+        "karma-jasmine-html-reporter": "~2.0.0",
+        "ng-packagr": "^15.0.0",
+        "node": "^20.2.0",
+        "rollup": "^3.25.0",
+        "rollup-plugin-copy": "^3.4.0",
+        "rollup-plugin-dts": "^5.3.0",
+        "rollup-plugin-peer-deps-external": "^2.2.4",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-typescript2": "~0.34.1",
+        "rxjs": "^7.8.0",
+        "sql.js": "^1.6.2",
+        "string-cipher": "^1.0.8",
+        "ts-node": "^10.9.1",
         "ts-patch": "^2.1.0",
-        "typescript": "^4.5.2"
+        "tslib": "^2.5.3",
+        "tslint": "^6.1.3",
+        "typescript": "~4.8.2",
+        "uuid": "^9.0.0"
     },
     "bugs": {
         "url": "https://github.com/beyond-decentralized/AIRroot/issues"
