--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "~0.34.1",
-        "rxjs": "^7.8.0",
+        "rxjs": "^7.8.1",
+        "rxjs-use-hooks": "^1.0.0",
         "zone.js": "^0.13.1",
         "sql.js": "^1.8.0",
         "string-cipher": "^1.0.8",
