--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
         "karma-jasmine-html-reporter": "~2.0.0",
         "ng-packagr": "^15.0.0",
         "node": "^20.2.0",
+        "observable-hooks": "^4.2.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router": "^5.3.4",
