--- a/package.json
+++ b/package.json
@@ -25,77 +25,60 @@
     "author": "Artem <Artem.V.Shamsutdinov@beyond-decentralized.world> (https://beyond-decentralized.world/)",
     "devDependencies": {
         "@as-com/pson": "^3.0.1",
-        "@angular/animations": "^15.0.0",
-        "@angular/cli": "~15.0.3",
-        "@angular/common": "^15.0.0",
-        "@angular/compiler": "^15.0.0",
-        "@angular/compiler-cli": "^15.0.0",
-        "@angular/core": "^15.0.0",
-        "@angular/forms": "^15.0.0",
-        "@angular/language-service": "^15.0.0",
-        "@angular/platform-browser": "^15.0.0",
-        "@angular/platform-browser-dynamic": "^15.0.0",
-        "@angular/router": "^15.0.0",
-        "@angular-devkit/build-angular": "^15.0.3",
-        "@babel/runtime": "7.20.6",
-        "@capacitor/app": "5.0.5",
-        "@capacitor/cli": "5.1.1",
+        "@angular/animations": "^16.2.0",
+        "@angular/cli": "~16.2.2",
+        "@angular/common": "^16.2.0",
+        "@angular/compiler": "^16.2.0",
+        "@angular/compiler-cli": "^16.2.0",
+        "@angular/core": "^16.2.0",
+        "@angular/forms": "^16.2.0",
+        "@angular/language-service": "^16.2.0",
+        "@angular/platform-browser": "^16.2.0",
+        "@angular/platform-browser-dynamic": "^16.2.0",
+        "@angular/router": "^16.2.0",
+        "@angular-devkit/build-angular": "^16.2.2",
+        "@angular-eslint/builder": "^16.1.2",
+        "@angular-eslint/eslint-plugin": "^16.1.2",
+        "@angular-eslint/eslint-plugin-template": "^16.1.2",
+        "@angular-eslint/schematics": "^16.1.2",
+        "@angular-eslint/template-parser": "^16.1.2",
+        "@capacitor/app": "5.0.6",
+        "@capacitor/cli": "5.4.0",
         "@capacitor/core": "5.1.1",
-        "@capacitor/haptics": "5.0.5",
-        "@capacitor/keyboard": "5.0.5",
-        "@capacitor/status-bar": "5.0.5",
-        "@ionic/angular": "^6.4.1",
-        "@ionic/angular-toolkit": "latest",
-        "@ionic/cli": "latest",
-        "@ionic/core": "^6.4.1",
-        "@ionic/react": "^7.0.0",
-        "@ionic/react-router": "^7.0.0",
+        "@capacitor/haptics": "5.0.6",
+        "@capacitor/keyboard": "5.0.6",
+        "@capacitor/status-bar": "5.0.6",
+        "@ionic/angular": "^7.4.1",
+        "@ionic/angular-toolkit": "^9.0.0",
+        "@ionic/core": "^7.4.1",
         "@rollup/plugin-commonjs": "^25.0.1",
         "@rollup/plugin-node-resolve": "~15.1.0",
         "@rollup/plugin-typescript": "^11.1.1",
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^14.0.0",
-        "@testing-library/user-event": "^14.4.3",
         "@tsconfig/node16": "1.0.2",
-        "@types/emscripten": "^1.39.6",
-        "@types/eslint": "^8.40.1",
-        "@types/estree": "^1.0.1",
         "@types/jasmine": "~4.3.0",
-        "@types/jest": "^26.0.20",
-        "@types/json-schema": "^7.0.12",
         "@types/node": "^18.11.15",
-        "@types/react": "^18.0.27",
-        "@types/react-dom": "^18.0.10",
-        "@types/react-router": "^5.1.20",
-        "@types/react-router-dom": "^5.3.3",
         "@types/sql.js": "^1.4.3",
-        "@vitejs/plugin-legacy": "^4.0.2",
-        "@vitejs/plugin-react": "^4.0.1",
+        "@typescript-eslint/eslint-plugin": "5.3.0",
+        "@typescript-eslint/parser": "5.3.0",
         "async": "^3.2.1",
+        "browser-sync": "^2.29.3",
         "cassandra-driver": "^4.6.3",
-        "cypress": "^12.7.0",
-        "eslint": "^8.35.0",
-        "eslint-plugin-react": "^7.32.2",
+        "eslint": "^7.26.0",
+        "eslint-plugin-import": "2.22.1",
+        "eslint-plugin-jsdoc": "30.7.6",
+        "eslint-plugin-prefer-arrow": "1.2.2",
         "fastify": "^3.22.0",
         "fastify-cors": "^6.0.2",
         "fastify-static": "^4.4.2",
-        "fs-extra": "^10.1.0",
         "ionicons": "^7.1.2",
-        "jasmine-core": "~4.5.0",
-        "jsdom": "^22.1.0",
+        "jasmine-core": "~4.6.0",
+        "jasmine-spec-reporter": "~5.0.0",
         "karma": "~6.4.0",
-        "karma-chrome-launcher": "~3.1.0",
+        "karma-chrome-launcher": "~3.2.0",
         "karma-coverage": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~3.0.2",
         "karma-jasmine": "~5.1.0",
-        "karma-jasmine-html-reporter": "~2.0.0",
-        "ng-packagr": "^15.0.0",
-        "node": "^20.2.0",
-        "observable-hooks": "^4.2.3",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router": "^5.3.4",
-        "react-router-dom": "^5.3.4",
-        "rimraf": "^5.0.1",
+        "karma-jasmine-html-reporter": "~2.1.0",
         "rollup": "^3.25.0",
         "rollup-plugin-copy": "^3.4.0",
         "rollup-plugin-delete": "^2.0.0",
@@ -105,19 +88,15 @@
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "~0.34.1",
         "rxjs": "^7.8.1",
-        "rxjs-use-hooks": "^1.0.0",
-        "zone.js": "^0.13.1",
         "sql.js": "^1.8.0",
         "string-cipher": "^1.0.8",
-        "ts-node": "^10.9.1",
+        "ts-node": "^8.3.0",
         "ts-patch": "^2.1.0",
         "tslib": "^2.5.3",
         "tslint": "^6.1.3",
-        "typescript": "~4.8.2",
+        "typescript": "~5.1.3",
         "uuid": "^9.0.0",
-        "vite": "^4.3.9",
-        "vite-plugin-mkcert": "^1.16.0",
-        "vitest": "^0.32.2"
+        "zone.js": "~0.13.1"
     },
     "bugs": {
         "url": "https://github.com/beyond-decentralized/AIRroot/issues"
