--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "clean": "node build/clean.mjs",
         "clean-external-dependencies": "node build/cleanExternalDependencies.mjs",
         "clean-build": "node build/build.mjs clean",
-        "ts-patch": "ts-patch install -s",
+        "install-ts-patch": "ts-patch install -s",
         "unwire-dependencies": "node build/unwireDependencies.mjs",
         "wire-dependencies": "node build/wireDependencies.mjs"
         
@@ -24,7 +24,6 @@
     ],
     "author": "Artem <Artem.V.Shamsutdinov@beyond-decentralized.world> (https://beyond-decentralized.world/)",
     "devDependencies": {
-        "@as-com/pson": "^3.0.1",
         "@angular/animations": "^16.2.0",
         "@angular/cli": "~16.2.2",
         "@angular/common": "^16.2.0",
@@ -42,6 +41,7 @@
         "@angular-eslint/eslint-plugin-template": "^16.1.2",
         "@angular-eslint/schematics": "^16.1.2",
         "@angular-eslint/template-parser": "^16.1.2",
+        "@as-com/pson": "^3.0.1",
         "@capacitor/app": "5.0.6",
         "@capacitor/cli": "5.4.0",
         "@capacitor/core": "5.1.1",
@@ -70,6 +70,7 @@
         "fastify": "^3.22.0",
         "fastify-cors": "^6.0.2",
         "fastify-static": "^4.4.2",
+        "fs-extra": "^11.1.1",
         "ionicons": "^7.1.2",
         "jasmine-core": "~4.6.0",
         "jasmine-spec-reporter": "~5.0.0",
@@ -92,7 +93,7 @@
         "sql.js": "^1.8.0",
         "string-cipher": "^1.0.8",
         "ts-node": "^8.3.0",
-        "ts-patch": "^2.1.0",
+        "ts-patch": "^3.0.2",
         "tslib": "^2.5.3",
         "tslint": "^6.1.3",
         "typescript": "~5.1.3",
