--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "install-ts-patch": "ts-patch install -s",
         "unwire-dependencies": "node build/unwireDependencies.mjs",
         "wire-dependencies": "node build/wireDependencies.mjs"
-        
     },
     "repository": {
         "type": "git",
@@ -41,7 +40,7 @@
         "@angular-eslint/eslint-plugin-template": "^16.1.2",
         "@angular-eslint/schematics": "^16.1.2",
         "@angular-eslint/template-parser": "^16.1.2",
-        "@as-com/pson": "^3.0.1",
+        "@beyond-decentralized/pson": "workspace:../PSON",
         "@capacitor/app": "5.0.6",
         "@capacitor/cli": "5.4.0",
         "@capacitor/core": "5.1.1",
@@ -55,13 +54,16 @@
         "@rollup/plugin-node-resolve": "~15.1.0",
         "@rollup/plugin-typescript": "^11.1.1",
         "@tsconfig/node16": "1.0.2",
+        "@types/bytebuffer": "5.0.45",
         "@types/jasmine": "~4.3.0",
+        "@types/long": "^4.0.2",
         "@types/node": "^18.11.15",
         "@types/sql.js": "^1.4.3",
         "@typescript-eslint/eslint-plugin": "5.3.0",
         "@typescript-eslint/parser": "5.3.0",
         "async": "^3.2.1",
         "browser-sync": "^2.29.3",
+        "bytebuffer": "^5.0.1",
         "cassandra-driver": "^4.6.3",
         "eslint": "^7.26.0",
         "eslint-plugin-import": "2.22.1",
@@ -80,6 +82,7 @@
         "karma-coverage-istanbul-reporter": "~3.0.2",
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.1.0",
+        "long": "^3.2.0",
         "rimraf": "^5.0.4",
         "rollup": "^3.25.0",
         "rollup-plugin-copy": "^3.4.0",
