--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         "@rollup/plugin-commonjs": "^25.0.1",
         "@rollup/plugin-node-resolve": "~15.1.0",
         "@rollup/plugin-typescript": "^11.1.1",
-        "@tsconfig/node16": "1.0.2",
+        "@tsconfig/node18": "^18.2.2",
         "@types/bytebuffer": "5.0.45",
         "@types/jasmine": "~4.3.0",
         "@types/long": "^4.0.2",
